ProdIND/ProdPrograms/force-app/main/default/objects/Error_Log__c/fields/Error_Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Error_Stacktrace__c</fullName>
    <label>Error Stacktrace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>