ProdIND/ProdPrograms/force-app/main/default/objects/Error_Log__c/fields/ProCredit_Deals__c.field-meta.xml
<CustomField>
    <fullName>ProCredit_Deals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProCredit Deals</label>
    <referenceTo>ProCredit_Deals__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>