ProdIND/ProdPrograms/force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Loan_Application__c</columns>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Method_Name__c</columns>
    <columns>Line_Number__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Error_Stacktrace__c</columns>
    <columns>Error_Cause__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Application__c</field>
        <operation>equals</operation>
        <value>L03092404028</value>
    </filters>
    <label>All</label>
</ListView>